--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Status</th>
-            <th scope="col" colspan="2">Action</th>
+            <th scope="col" colspan="3">Action</th>
           </tr>
         </thead>
         <tbody>
@@ -26,8 +26,7 @@
               <td>{{todo.name}}</td>
               <td>{{todo.description}}</td>
               <td>{{todo.status}}</td>
-              <td><a href="{% url 'edit' pk=todo.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
-              <td><button type"button" class="btn btn-warning">Delete</button></td>
+              <td><a href="{% url 'edit' pk=todo.id %}"><button type="button" class="btn btn-warning">Edit</button></a> <a href="{% url 'delete' pk=todo.id%}"><button type"button" class="btn btn-warning">Delete</button></a> <a href="{% url 'delete1' %}"><button type"button" class="btn btn-warning">DeleteAll</button></a></td>
             </tr>
             {% endfor%}
         </tbody>
