--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>this is a home.</h1>
+  {%include 'nav.html'%}
      <table class="table">
         <thead>
           <tr>
@@ -20,15 +20,20 @@
           </tr>
         </thead>
         <tbody>
+            {% if todos %}
             {% for todo in todos %}
             <tr>
               <th>{{todo.id}}</th>
               <td>{{todo.name}}</td>
               <td>{{todo.description}}</td>
               <td>{{todo.status}}</td>
-              <td><a href="{% url 'edit' pk=todo.id %}"><button type="button" class="btn btn-warning">Edit</button></a> <a href="{% url 'delete' pk=todo.id%}"><button type"button" class="btn btn-warning">Delete</button></a> <a href="{% url 'delete1' %}"><button type"button" class="btn btn-warning">DeleteAll</button></a></td>
+              <td><a href="{% url 'edit' pk=todo.id %}"><button type="button" class="btn btn-warning">Edit</button></a> <a href="{% url 'delete' pk=todo.id%}"><button type"button" class="btn btn-warning">Delete</button></a></td>
             </tr>
             {% endfor%}
+            <tr>
+              <td><a href="{% url 'delete1' %}"><button type"button" class="btn btn-warning">DeleteAll</button></a></td>
+            </tr>
+            {% endif %}
         </tbody>
       </table>
 </body>
